management/server/webui/src/main/webapp/css/style.css
/*Fonts*/
@import url(https://fonts.googleapis.com/css?family=Ubuntu:500italic,500,400,400italic,700,700italic);

/*General*/

html, body {
    height: 100%;
    margin: 0;
}

a {
    color: #04346E;
    text-decoration: underline;
}

a:hover {
    text-decoration: none;
}

body {
    font-family: 'Ubuntu', sans-serif;
    background-color: #f8fbfd;
    position: relative;
}

input[type=checkbox] {
    margin: 0;
    vertical-align: middle;
}

.clear {
    clear: both;
}

/*Header*/

.b-personal-space {
	position: absolute;
	top: 10px;
	right: 16px;
	z-index: 10;
}

.b-header {
    height: 45px;
    padding: 15px 30px 0;
    background-color: #fff;
}

.b-header__logo {
    margin: 0;
    padding: 15px;
}

.b-header__logo a {
    display: block;
}

.b-header__logo_left {
    float: left;
    display: inline-block;
}

.b-tabs-menu_header .b-header__userbar_right {
    padding-right: 15px;
}

.b-header__userbar_right {
    float: right;
    display: inline-block;
	padding: 4px 0 0 0;
}
.b-header-userbar__icon {
    color: #838093;
    font-size: 13px;
}
.b-header-userbar__name {
    display: inline-block;
    vertical-align: top;
    height: 30px;
    margin-right: 5px;
    padding-top: 6px;
}

.b-header-userbar-name {
    font-size: 13px;
    color: #04346E;
    text-decoration: underline;
}

.b-header-userbar__avatar {
    height: 30px;
    width: 30px;
    display: inline-block;
}

.b-header-userbar-avatar {
    border: 1px solid #CCCEEE;
    border-radius: 15px;
}

.b-header-userbar-name:hover {
    text-decoration: none;
}

.b-content {
    padding: 15px 15px 0;
}

.b-workspace {
    margin: 0 0 0 295px;
    background-color: #fff;
    border: 1px solid #CCCEEE;
    /*border-radius: 5px;*/
    /*padding: 16px 0 32px 0;*/
    position: relative;
    overflow: hidden;
}

.b-workspace__header {
    padding: 0 15px;
    line-height: 51px;
    height: 52px;
    border-bottom: 1px solid #CCCEEE;
}
.b-workspace__header_tabs {
    padding: 0;
}
.b-workspace__header_cloud-env {
    margin: 0;
}
.b-workspace__content {
    padding: 15px;
}
.b-workspace__content_cloud-env {
    padding: 0;
}

.b-workspace__footer {
    padding: 15px;
}
.b-workspace__footer_login {
    background-color: #f8fbfd;
    position: relative;
    padding-top: 25px;
    margin-top: 10px;
    padding-bottom: 25px;
    border-top: 1px solid #CCCEEE;
}
.b-workspace__footer_login {

}
.b-workspace__footer_login:before {
    content: "or";
    position: absolute;
    width: 26px;
    height: 26px;
    font-size: 12px;
    line-height: 29px;
    border-radius: 50%;
    border: 1px solid #CCCEEE;
    background-color: #fff;
    top: -13px;
    left: 50%;
    color: #04346E;
    margin-left: -13px;
    text-align: center;
}
.b-workspace__footer_login:after {
    content: "";
    position: absolute;
    width: 28px;
    height: 13px;
    top: -13px;
    left: 50%;
    margin-left: -13px;
    background-color: #fff;
}
.b-title {
    font-size: 14px !important;
    padding: 0 0 0 0;
    margin: 0 0 0 0;
    color: #04346E;
    font-weight: 400;
}

.b-title a,
.b-title span {
    text-decoration: none;
    color: #04346E;
    position: relative;
}

.b-title a:hover {
    text-decoration: underline;
}

.b-title_edit {
	display: inline-block;
}

.b-title_edit input {
	border: none;
	padding: 0 0 0 0;
	resize: horizontal;
}

.b-title_edit input:active {
	width: auto;
}

.b-title_edit input:focus,
.b-title_edit span:hover input{
	border-bottom: 1px solid #04346E;
	min-width: 200px;
}

.b-title_edit a:hover:after,
.b-title_edit span:hover:after {
    font-family: FontAwesome;
    content: "\f040";
    position: absolute;
    font-size: 12px;
    bottom: 3px;
    right: -16px;

}

.b-title_sub {
    font-size: 16px;
    font-weight: 400;
    padding-bottom: 20px;
}

.b-title_breadcrumbs {
    text-transform: capitalize;
    color: #7f8ea4;
}

/*Buttons*/
.b-btn {
    border: none;
    display: inline-block;
    padding: 0 15px;
    height: 30px;
    line-height: 30px;
    background-color: #7f8ea4;
    border-radius: 2px;
    color: #fff;
    font-family: 'Ubuntu', sans-serif;
    font-size: 13px;
    text-decoration: none;
    -webkit-transition: all .4s ease-in-out;
    -moz-transition: all .4s ease-in-out;
    -o-transition: all .4s ease-in-out;
    -ms-transition: all .4s ease-in-out;
    transition: all .4s ease-in-out;
    cursor: pointer;
    box-sizing: border-box;
    vertical-align: middle;
}
.b-btn:hover {
    text-decoration: none;
    background-color: #ccc;
}
.b-btn_light-grey {
    background-color: #f8fbfd;
    color: #333333;
    border: 1px solid #ccceee;
}
.b-btn_light-grey:hover {
    background-color: #ebebf2;
}
.b-btn-light-grey-icon {
    font-size: 14px;
}

.b-btn-light-grey-icon_green {
    color: #22B573;
}

.b-btn-light-grey-icon_red {
    color: #ef3f61;
}

.b-btn_margin-r {
    margin-right: 20px;
}

.b-btn_search-field-level {
	margin-bottom: -45px;
	position: relative;
	z-index: 2;
}


.b-btn_blue {
    background-color: #179cee;
}

.b-btn_blue:hover {
    background-color: #0568e6;
}

.b-btn_white {
	background-color: #fff;
	color: #04346E;
	border: 1px solid #cccece;
}

.b-btn_white:hover {
	background-color: #f8fbfd;
}

.b-btn_green {
    background-color: #4bbc6e;
}

.b-btn_green:hover {
    background-color: #348f6c;
}

.b-btn_red {
    background-color: #ef3f61;
}

.b-btn_red:hover {
    background-color: #d23561;
}

.b-btn_light-grey {
    background-color: #f8fbfd;
    color: #333333;
}

.b-btn:disabled {
    background-color: #EAEAEA;
    color: #333333;
}

.b-btn-light-grey-icon {
    font-size: 14px;
}

.b-btn-light-grey-icon_green {
    color: #22B573;
}

.b-btn-light-grey-icon_red {
    color: #ef3f61;
}

.b-btn_header-button {
    float: right;
}
/* ... */

